plugins/kotlin/idea/tests/testData/multiplatform/incompleteActualization/js/js.kt
package foo

actual class <!LINE_MARKER("descr='Has expects in common module'")!>ExpectInCommonActualInJsOnly<!>
actual class <!LINE_MARKER("descr='Has expects in jvmAndJs module'")!>ExpectInMiddleActualInJsOnly<!>
